--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ env:
     IMAGE_TAG: latest
 
 phases:
-  prebuild:
+  pre_build:
     commands:
       - set eux
       - echo "Deploy AutoGluon SageMaker Docker Container"
